--- a/src/app/conduct/conduct.component.html
+++ b/src/app/conduct/conduct.component.html
@@ -4,7 +4,7 @@
       <mat-form-field class="example-full-width">
         <input id="trackOrSignalInput" matInput placeholder="Signal or track address">
       </mat-form-field>
-      <button mat-raised-button color="primary" id="straight-green">Straight/Green</button>
+      <button mat-raised-button id="straight-green">Straight/Green</button>
       <button mat-raised-button color="warn" id="turn-red">Turn/Red</button>
     </mat-card>
   </div>
