--- a/src/app/conduct/conduct.component.scss
+++ b/src/app/conduct/conduct.component.scss
@@ -32,6 +32,8 @@
     margin-right: 5px;
     margin-top: 2%;
     margin-left: 5px;
+    background-color: #5cb85c;
+    color: white;
 }
 
 #turn-red {
@@ -97,6 +99,7 @@
 
 .set-loko-address {
     margin-left: 2%;
+    background-color: $kea-blue;
 }
 
 #pdf-box {
