--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,35 +1,27 @@
+<button id="close_button" mat-icon-button (click)="onClose()" tabindex="-1"><mat-icon class="small">clear</mat-icon></button>
 <div id="headline">
-  <h3>Register a new user</h3>
+  <h3>{{userService.addUserForm.controls['id'].value ? "Edit an existing user":"Register a new user"}}</h3>
   <mat-divider class="divider"></mat-divider>
 </div>
 <div class="container">
-  <form novalidate [formGroup]="addUserForm" (ngSubmit)="onSubmit(addUserForm)">
+  <form novalidate [formGroup]="userService.addUserForm" (ngSubmit)="onSubmit(userService.addUserForm)">
     <div class="form-container">
+        <input type="hidden" formControlName="id">
       <mat-form-field>
-        <input type="text" formControlName="firstName" matInput placeholder="First name">
+        <input type="text" formControlName="firstName" matInput placeholder="First name*">
       </mat-form-field>
-      <p *ngIf="addUserForm.controls.firstName.touched && addUserForm.controls.firstName.errors?.required">
-        First name must be filled out
-      </p>
 
       <mat-form-field>
-        <input type="text" formControlName="lastName" matInput placeholder="Last name">
+        <input type="text" formControlName="lastName" matInput placeholder="Last name*">
       </mat-form-field>
-      <p *ngIf="addUserForm.controls.lastName.touched && addUserForm.controls.lastName.errors?.required" class="error">
-        Last name must be filled out
-      </p>
 
       <mat-form-field>
-        <input type="text" formControlName="email" matInput placeholder="Email">
+        <input type="text" formControlName="email" matInput placeholder="Email*">
       </mat-form-field>
-      <p *ngIf="addUserForm.get('email').touched && addUserForm.get('email').errors.emailValidator">
-        Must be a valid email
-      </p>
-      <p *ngIf="addUserForm.controls.email.touched && addUserForm.controls.email.errors?.required">
-        Email must be filled out
-      </p>
 
-      <button type="submit" id="login_button" [disabled]="!addUserForm.valid" mat-raised-button>Submit</button>
+      
+      <button type="submit" id="login_button" [disabled]="!userService.addUserForm.valid" mat-raised-button>Submit</button>
+      <button mat-raised-button color="warn" id=clear_button (click)="onClear()">Clear</button>
 
     </div>
   </form>
