--- a/src/app/train-interface/train-interface.component.html
+++ b/src/app/train-interface/train-interface.component.html
@@ -9,9 +9,13 @@
         <mat-card-header>
           <mat-card-title class="train-title">{{train.name}}</mat-card-title>
           <div class="fill"></div>
-              <button mat-raised-button id="edit-button" (click)="openDialog()">Edit</button>
+          <button mat-icon-button (click)="onEdit(train)">
+              <mat-icon>launch</mat-icon>
+            </button>
+            <button mat-icon-button color="warn" (click)="onDelete(train.name)">
+              <mat-icon>delete_outline</mat-icon></button>
         </mat-card-header>
-        <img mat-card-image src="/assets/img/{{train.photoName}}" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="/assets/img/{{train.photoName}}">
         <mat-card-content>
           <p>Loco Address: {{train.locoAddress}}</p>
           <p>Length: {{train.length}}</p>
