--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -10,15 +10,17 @@
       <mat-form-field>
         <input type="text" formControlName="firstName" matInput placeholder="First name*">
       </mat-form-field>
+      <div *ngIf="userService.addUserForm.controls['firstName'].touched && userService.addUserForm.controls['firstName'].errors?.required">First name is required</div>
 
       <mat-form-field>
         <input type="text" formControlName="lastName" matInput placeholder="Last name*">
       </mat-form-field>
+      <div *ngIf="userService.addUserForm.controls['lastName'].touched && userService.addUserForm.controls['lastName'].errors?.required">Last name is required</div>
 
       <mat-form-field>
         <input type="text" formControlName="email" matInput placeholder="Email*">
       </mat-form-field>
-
+      <div *ngIf="userService.addUserForm.controls['email'].touched && userService.addUserForm.controls['email'].errors?.required">Email is required</div>
       
       <button type="submit" id="login_button" [disabled]="!userService.addUserForm.valid" mat-raised-button>Submit</button>
       <button mat-raised-button color="warn" id=clear_button (click)="onClear()">Clear</button>
