Created e2e test for login and user creation

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -31,7 +31,7 @@
           <span class="fill-space"></span>
           <a [routerLink]="['conduct']" routerLinkActive="router-link-active" ><span class="nav-item">Conduct</span></a>
           <a [routerLink]="['train/interface']" routerLinkActive="router-link-active"> <span class="nav-item">Trains</span></a>
-          <a [routerLink]="['user']" routerLinkActive="router-link-active"><span class="nav-item">Users</span></a>
+          <a [routerLink]="['user']" id="userNavButton" routerLinkActive="router-link-active"><span class="nav-item">Users</span></a>
           <a [routerLink]="['docs']" routerLinkActive="router-link-active"><span class="nav-item">Docs</span></a>
           <a (click)="logout()" href><span class="nav-item-last">Logout</span></a>
     </mat-toolbar>
