--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,7 +10,7 @@
       <mat-icon id="add-icon">add</mat-icon>CREATE
     </button>
     <mat-form-field class="search-form-field" floatLabel="never">
-      <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+      <input matInput [(ngModel)]="searchKey" id="userSearch" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
       <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
         <mat-icon>close</mat-icon>
       </button>
