--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -10,18 +10,19 @@
       <mat-form-field>
         <input type="text" id="createUserFirstName" formControlName="firstName" matInput placeholder="First name*">
       </mat-form-field>
-      <div *ngIf="userService.addUserForm.controls['firstName'].touched && userService.addUserForm.controls['firstName'].errors?.required">First name is required</div>
+      
+      <div class="formErrorMessage" *ngIf="userService.addUserForm.controls['firstName'].touched && userService.addUserForm.controls['firstName'].errors?.required">First name is required</div>
 
       <mat-form-field>
         <input type="text" id="createUserLastName" formControlName="lastName" matInput placeholder="Last name*">
       </mat-form-field>
-      <div *ngIf="userService.addUserForm.controls['lastName'].touched && userService.addUserForm.controls['lastName'].errors?.required">Last name is required</div>
+      <div  class="formErrorMessage" *ngIf="userService.addUserForm.controls['lastName'].touched && userService.addUserForm.controls['lastName'].errors?.required">Last name is required</div>
 
       <mat-form-field>
         <input type="text" id="createUserEmail" formControlName="email" matInput placeholder="Email*">
       </mat-form-field>
-      <div *ngIf="userService.addUserForm.controls['email'].touched && userService.addUserForm.controls['email'].errors?.required">Email is required</div>
-      
+      <div class="formErrorMessage" *ngIf="userService.addUserForm.controls['email'].touched && userService.addUserForm.controls['email'].errors?.required">Email is required</div>
+      <div class="formErrorMessage" *ngIf="userService.addUserForm.controls['email'].value.length !== 0 && userService.addUserForm.get('email').hasError('email') && userService.addUserForm.controls['email'].touched">Invalid email</div>
       <button type="submit" id="submitNewUserButton" [disabled]="!userService.addUserForm.valid" mat-raised-button>Submit</button>
       <button mat-raised-button color="warn" id=clear_button (click)="onClear()">Clear</button>
 
